--- a/src/data/bookmarkhub.yaml
+++ b/src/data/bookmarkhub.yaml
@@ -6,24 +6,24 @@ bookmarkhub:
         children:
           - name: 阅读与稍后
             urls:
-              - title: Raindrop.io
+              - name: Raindrop.io
                 url: https://raindrop.io/
                 description: 优雅的跨平台书签与阅读稍后工具。
           - name: 时间与日程
             urls:
-              - title: Todoist
+              - name: Todoist
                 url: https://todoist.com/
                 description: 轻量任务与日程管理，快速收集与安排待办。
       - name: 云端与存储
         children:
           - name: 云盘
             urls:
-              - title: Google Drive
+              - name: Google Drive
                 url: https://drive.google.com/
                 description: 云端文件存储与共享，实时协作编辑。
           - name: 协作
             urls:
-              - title: Notion
+              - name: Notion
                 url: https://www.notion.so/
                 description: 一体化笔记与协作工作台，支持数据库与团队协作。
   - name: 开发工具箱
@@ -33,27 +33,27 @@ bookmarkhub:
         children:
           - name: 组件库
             urls:
-              - title: Figma
+              - name: Figma
                 url: https://www.figma.com/
                 description: 基于云端的协同设计工具，适合产品与设计团队。
-              - title: Storybook
+              - name: Storybook
                 url: https://storybook.js.org/
                 description: 组件开发与文档平台，支持 React、Vue 等前端框架。
           - name: 性能调优
             urls:
-              - title: WebPageTest
+              - name: WebPageTest
                 url: https://www.webpagetest.org/
                 description: 页面性能检测与瀑布图分析，支持多节点测试。
       - name: 后端
         children:
           - name: API 设计
             urls:
-              - title: Postman
+              - name: Postman
                 url: https://www.postman.com/
                 description: API 调试与测试平台，支持协作与自动化。
           - name: 数据库
             urls:
-              - title: Supabase
+              - name: Supabase
                 url: https://supabase.com/
                 description: 开源后端即服务，提供数据库与认证能力。
   - name: 灵感探索
@@ -63,26 +63,26 @@ bookmarkhub:
         children:
           - name: 配色
             urls:
-              - title: Coolors
+              - name: Coolors
                 url: https://coolors.co/
                 description: 快速生成配色方案，可导出调色板。
           - name: 图形与图库
             urls:
-              - title: Muzli
+              - name: Muzli
                 url: https://muz.li/
                 description: 每日设计灵感聚合，涵盖 UI、品牌与案例。
-              - title: Dribbble
+              - name: Dribbble
                 url: https://dribbble.com/
                 description: 设计师作品社区，获取视觉与交互灵感。
       - name: 学习资源
         children:
           - name: 课程
             urls:
-              - title: Frontend Masters
+              - name: Frontend Masters
                 url: https://frontendmasters.com/
                 description: 高质量前端课程平台，涵盖框架、性能与工程化。
           - name: 社区
             urls:
-              - title: DEV Community
+              - name: DEV Community
                 url: https://dev.to/
                 description: 开发者社区与文章平台，分享工程实践与案例。
