--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "node --require ./tests/register-yaml.js --import tsx --test tests/github-storage.test.ts"
+    "test": "node --require ./tests/register-yaml.js --import tsx --test tests/*.test.ts"
   },
   "dependencies": {
     "next": "16.1.6",
