--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,66 +1,35 @@
 name: Deploy Pages
-
 on:
   push:
     branches:
       - main
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: pages
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      VITE_BASE: /bookmarkhub/
+      VITE_GITHUB_OWNER: Mr-iFan
+      VITE_GITHUB_REPO: bookmarkhub
+      VITE_GITHUB_BRANCH: main
+      VITE_STORAGE_DEFAULT: local
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-
-      - name: Configure Pages
-        id: pages
-        uses: actions/configure-pages@v5
+      - run: npm install
+      - run: npm run build
+      - run: cp dist/index.html dist/404.html
+      - uses: actions/upload-pages-artifact@v3
         with:
-          enablement: true
-
-      - name: Determine base path
-        run: |
-          if [[ "${{ github.event.repository.name }}" == "${{ github.repository_owner }}.github.io" ]]; then
-            echo "NEXT_BASE_PATH=" >> "$GITHUB_ENV"
-          else
-            echo "NEXT_BASE_PATH=/${{ github.event.repository.name }}" >> "$GITHUB_ENV"
-          fi
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build
-        run: npm run build
-
-      - name: Prepare artifact
-        run: |
-          touch out/.nojekyll
-          if [ ! -f out/404.html ] && [ -f out/index.html ]; then
-            cp out/index.html out/404.html
-          fi
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: out
+          path: dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
