--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,10 +19,10 @@ jobs:
           node-version: 20
       - run: npm install
       - run: npm run build
-      - run: cp dist/index.html dist/404.html
+      - run: cp out/
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: out
 
   deploy:
     needs: build
