--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 20
       - run: npm install
       - run: npm run build
-      - run: cp out/
+      - run: cp -r out/
       - uses: actions/upload-pages-artifact@v3
         with:
           path: out
